--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1,7 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
- 
+
+img{
+  max-width: 40%;
+}
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -76,3 +79,4 @@
     @apply bg-background text-foreground;
   }
 }
+
